--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
 
 :root {
   --violet: #8000ff;
+  --purple: #7440a7;
   --orange: #84372b;
   --green: #57b1a9;
   --pink: #912657;
@@ -40,11 +41,11 @@ button:hover {
 }
 
 a {
-  color: #var(--green);
+  color: var(--green);
 }
 
 a:active {
-  background-color: #var(--green);
+  background-color: var(--green);
 }
 
 a:hover {
@@ -63,14 +64,15 @@ a:hover {
 body {
   font-size: 1.6rem;
   font-family: "Space Grotesk";
-  overflow: scroll;
-  background: var(--violet);
-  background: rgb(186, 0, 255);
+  /* overflow: hidden; */
+  /* overflow: scroll; */
+  background: var(--purple);
+  /* background: rgb(186, 0, 255);
   background: linear-gradient(
     -39deg,
     rgba(186, 0, 255, 0.9962578781512605) 11%,
     rgba(128, 0, 255, 1) 100%
-  );
+  ); */
   /* padding: 1.5rem */
   /* display:flex; */
   /* flex-direction: column; */
@@ -81,21 +83,27 @@ body {
 header {
   display: flex;
   justify-content: flex-end;
-  align-items: center;
-  padding: 2rem;
+  flex-direction: column;
+  align-items: flex-end;
+  padding: 0 2rem;
 }
 
 .wrapper {
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  /* border: 2px solid white; */
+}
+
+.wrapper.box {
   border: 2px solid white;
 }
 
 main {
   padding: 2rem;
   margin-block-end: 4rem;
+  margin-top: -5rem;
 }
 
 textarea {
@@ -146,8 +154,8 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  /* position:fixed; */
-  bottom: 0;
+  position: fixed;
+  bottom: 2%;
   padding: 2rem;
   width: 100%;
   height: 10%;
@@ -178,9 +186,12 @@ nav {
 }
 
 .nav-item.logo {
+  position: fixed;
+  bottom: 2%;
+  right: 2%;
   width: 20rem;
-  margin-right: -5rem;
-  margin-bottom: -5rem;
+  /* margin-right: -5rem;
+  margin-bottom: -5rem; */
 }
 
 .nav-wrapper:last-child {
@@ -191,11 +202,27 @@ nav {
 .nav-wrapper.btns {
   background-color: white;
   padding: 0.6rem;
-  margin-bottom: -4rem;
+  /* margin-bottom: -4rem; */
 }
 
 .nav-wrapper.btns > .nav-item > button {
   color: black;
+}
+
+/* fixed footer without box  */
+
+footer.fixed {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+}
+
+footer.fixed > .nav-wrapper.btns {
+  margin-bottom: 0;
+}
+
+footer.fixed > .nav-wrapper > .nav-item.logo {
+  margin: 0;
 }
 
 /* MODULE LIST */
@@ -233,20 +260,25 @@ main.modules > h1.title {
 }
 
 .menu-wrapper.module-list > .menu-item {
-  border: 1px solid white;
-  width: 13%;
-  height: 13vh;
+  /* border: 1px solid white; */
+  width: 18%;
+  /* height: 13vh; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 5px;
   position: relative;
-  background-color: var(--grey);
+  /* background-color: var(--grey); */
+}
+
+.menu-wrapper.module-list > .menu-item > img {
+  margin-block-end: 2rem;
 }
 
 .menu-wrapper.module-list > .menu-item.complete {
-  background-color: var(--green);
+  /* background-color: var(--green); */
+  /* border: 4px solid var(--green); */
 }
 .menu-wrapper.module-list > .menu-item > h2 {
   position: absolute;
@@ -262,11 +294,12 @@ main.modules > h1.title {
 }
 
 h3.complete {
-  background: var(--pink);
+  background: var(--green);
   width: fit-content;
   padding: 0 1rem;
   transform: rotate(-4deg);
   margin-left: -10rem;
+  font-size: 3rem;
 }
 
 h2.subtitle.complete {
@@ -278,16 +311,20 @@ h2.subtitle.complete {
 main.speaking {
   padding: 1rem 8rem;
   /* overflow:scroll; */
+  margin-left: 10rem;
 }
 
 main.speaking.scroll {
-  overflow: scroll;
+  /* overflow: scroll; */
 }
 
 main.speaking > .text-wrapper {
   width: 100%;
-  height: 45vh;
-  overflow: scroll;
+  font-size: 1.8rem;
+  /* height: 45vh; */
+  margin-bottom: 20rem;
+
+  /* overflow: scroll; */
 }
 
 /* CODEWORD  */
@@ -333,4 +370,62 @@ main.codeword {
 
 .enter-codename-wrapper > input {
   margin-inline-end: 2rem;
+}
+
+/* LANDING  */
+
+main.codeword.landing {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+main.codeword.landing > .hero {
+  max-width: 50%;
+}
+
+.triangle {
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 100px 173.2px 100px;
+  border-color: transparent transparent var(--green) transparent;
+  transform: rotate(0deg);
+}
+
+.x {
+  animation: x 13s linear infinite alternate;
+}
+
+.y {
+  position: fixed;
+  animation: y 7s linear infinite alternate;
+  -webkit-animation: rotate 5s ease 0s infinite normal;
+  -moz-animation: rotate 5s ease 0s infinite normal;
+  -ms-animation: rotate 5s ease 0s infinite normal;
+  animation: rotate 5s ease 0s infinite normal;
+}
+
+@keyframes x {
+  100% {
+    transform: translateX(calc(100vw - 1080px));
+  }
+}
+
+@keyframes y {
+  100% {
+    transform: translateY(calc(100vh - 1080px));
+  }
+}
+
+@-webkit-keyframes rotate {
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
 }
