--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,8 @@
   --green: #57b1a9;
   --pink: #912657;
   --grey: rgba(129, 129, 129, 0.65);
+  --color: #00b4ff;
+  --speed: 5;
 }
 
 /* GET RID OF TWINE STYLES */
@@ -309,9 +311,11 @@ h2.subtitle.complete {
 /* SPEAKING  */
 
 main.speaking {
-  padding: 1rem 8rem;
+  /* padding: 1rem 8rem; */
+  width: 60%;
+  margin: auto;
   /* overflow:scroll; */
-  margin-left: 10rem;
+  /* margin-left: 10rem; */
 }
 
 main.speaking.scroll {
@@ -355,6 +359,19 @@ main.codeword {
   margin-block-end: 2rem;
 }
 
+.code-input > input {
+  min-width: inherit;
+  background-color: black;
+  border: none;
+  border-radius: 4px;
+  transform: rotate(-2deg);
+}
+
+.code-input > input:focus {
+  background-color: var(--orange);
+  border: 1px solid white;
+}
+
 .codeword-wrapper > .btn-result-wrapper {
   display: flex;
   align-items: baseline;
@@ -364,8 +381,9 @@ main.codeword {
   margin-inline-end: 2rem;
 }
 
-#coderesult > h2.subtitle {
+.coderesult > h2.subtitle {
   margin-left: 0;
+  font-size: 1.5rem;
 }
 
 .enter-codename-wrapper > input {
@@ -375,9 +393,11 @@ main.codeword {
 /* LANDING  */
 
 main.codeword.landing {
+  height: 100vh;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
+  margin-block-end: 0;
 }
 
 main.codeword.landing > .hero {
@@ -428,4 +448,192 @@ main.codeword.landing > .hero {
   100% {
     transform: rotate(360deg);
   }
+}
+
+/* LOADING  */
+
+.loading-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.container {
+  width: 400px;
+  height: 400px;
+  margin: 0 auto;
+  position: relative;
+  perspective: 300px;
+  perspective-origin: 50% 40%;
+}
+
+.side {
+  position: absolute;
+  left: 140px;
+  top: 150px;
+  width: 0;
+  height: 0;
+  border-left: 60px solid transparent;
+  border-right: 60px solid transparent;
+  border-bottom: 120px solid green;
+  transform-origin: 50% 0%;
+  /* animation: spin var(--speed) + s infinite linear; */
+  animation: spin 5s infinite linear;
+}
+
+.back {
+  /* animation-delay: -(var(--speed) / 2) + s; */
+  animation-delay: -5s;
+}
+
+.right {
+  /* animation-delay: -(var(--speed) / 4) + s; */
+  animation-delay: -1.25s;
+}
+
+.front {
+  /* animation-delay: -(var(--speed) / 2) + s; */
+  animation-delay: -2.5s;
+}
+
+.left {
+  /* animation-delay: -(var(--speed) * 0.75) + s; */
+  animation-delay: -3.75s;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotateY(0deg) rotateX(30deg);
+    /* border-bottom-color: lighten(var(--color), 5%); */
+    border-bottom-color: #4a70da;
+  }
+  25% {
+    transform: rotateY(90deg) rotateX(30deg);
+    /* border-bottom-color: darken(var(--color), 5%); */
+    border-bottom-color: #4068d7;
+    opacity: 1;
+  }
+  25.1% {
+    opacity: 0.5;
+  }
+  50% {
+    transform: rotateY(180deg) rotateX(30deg);
+    /* border-bottom-color: darken(var(--color), 12%); */
+    border-bottom-color: #184bd9;
+  }
+  74.9% {
+    opacity: 0.5;
+  }
+  75% {
+    transform: rotateY(270deg) rotateX(30deg);
+    /* border-bottom-color: darken(var(--color), 15%); */
+    border-bottom-color: #0032bc;
+    opacity: 1;
+  }
+  100% {
+    transform: rotateY(360deg) rotateX(30deg);
+    /* border-bottom-color: lighten(var(--color), 5%); */
+    border-bottom-color: #5069b0;
+  }
+}
+
+.shadow {
+  position: absolute;
+  top: 300px;
+  left: 175px;
+  width: 50px;
+  height: 50px;
+  background-color: #bbb;
+  box-shadow: 0 0 40px 40px #bbb;
+  animation: shadow 5s infinite linear;
+}
+
+@keyframes shadow {
+  0% {
+    transform: rotateX(90deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(90deg) rotateZ(-360deg);
+  }
+}
+
+/* UNLOCK  */
+
+.triangle-container {
+  width: fit-content;
+}
+
+.triangle {
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 0 100px 173.2px 100px;
+  border-color: transparent transparent #ffffff transparent;
+  transform: rotate(0deg);
+  opacity: 0;
+}
+
+.triangle.down {
+  transform: rotate(180deg);
+  margin: 0 -9rem;
+}
+
+.triangle.four.up {
+  margin-bottom: 0.8rem;
+  transform-origin: bottom right;
+}
+
+.triangle.four {
+  border-color: transparent transparent white transparent;
+}
+
+.triangle-wrapper-lower {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.triangle-wrapper-upper {
+  display: flex;
+  justify-content: center;
+}
+
+/* ANIMATION  */
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes unlock {
+  0% {
+    opacity: 1;
+    transform: rotate(0deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotate(50deg);
+  }
+}
+
+.fade-in1 {
+  animation: 1s linear 0s 1 fadeIn forwards;
+}
+
+.fade-in2 {
+  animation: 1s linear 0.2s 1 fadeIn forwards;
+}
+
+.fade-in3 {
+  animation: 1s linear 0.4s 1 fadeIn forwards;
+}
+
+.fade-in4 {
+  animation: 1s linear 0.6s 1 fadeIn forwards;
+}
+
+.unlock {
+  animation: 2s linear 0s 1 unlock forwards;
 }
