--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,11 +4,13 @@
   --violet: #8000ff;
   --purple: #7440a7;
   --orange: #84372b;
+  --greenbright: #4caf50;
   --green: #57b1a9;
   --pink: #912657;
   --grey: rgba(129, 129, 129, 0.65);
   --color: #00b4ff;
   --speed: 5;
+  --headings: "Jura", sans-serif;
 }
 
 /* GET RID OF TWINE STYLES */
@@ -60,6 +62,10 @@ a:hover {
 
 #story {
   margin: 0;
+}
+
+.disappear {
+  display: none !important;
 }
 
 /* GENERAL STYLES */
@@ -114,7 +120,7 @@ textarea {
 
 h1,
 h2 {
-  font-family: "Jura", sans-serif;
+  font-family: var(--headings);
 }
 
 h1.title,
@@ -123,6 +129,11 @@ h2.subtitle {
   width: fit-content;
   padding: 0 1rem;
   transform: rotate(-4deg);
+  /* margin-left: -10rem; */
+}
+
+h1.title.left,
+h2.subtitle.left {
   margin-left: -10rem;
 }
 
@@ -148,6 +159,13 @@ h1.title.top {
   to {
     transform: rotate(360deg);
   }
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* FOOTER */
@@ -264,21 +282,42 @@ main.modules > h1.title {
 .menu-wrapper.module-list > .menu-item {
   /* border: 1px solid white; */
   width: 18%;
-  /* height: 13vh; */
+  /* height: 80%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   border-radius: 5px;
   position: relative;
-  /* background-color: var(--grey); */
 }
 
-.menu-wrapper.module-list > .menu-item > img {
+.menu-wrapper.module-list > .menu-item > img,
+.menu-wrapper.module-list
+  > .menu-item
+  > .flip-card-inner
+  > .flip-card-front
+  > img {
   margin-block-end: 2rem;
+  border-radius: 10px;
+  filter: grayscale(100%);
+  /* animation: float 6s ease-in-out infinite; */
 }
 
-.menu-wrapper.module-list > .menu-item.complete {
+.menu-wrapper.module-list > .menu-item {
+}
+
+.menu-wrapper.module-list > .menu-item:hover,
+.menu-wrapper.module-list > .menu-item:active {
+  animation: grow 1s ease forwards;
+  /* transition: transform 2s ease-in-out; */
+}
+
+.menu-wrapper.module-list
+  > .menu-item.complete
+  > .flip-card-inner
+  > .flip-card-front
+  > img {
+  filter: grayscale(0%);
   /* background-color: var(--green); */
   /* border: 4px solid var(--green); */
 }
@@ -289,14 +328,14 @@ main.modules > h1.title {
   font-size: 1.8rem;
 }
 
-.menu-wrapper.module-list > .menu-item > .macro-append-insert > h3.complete {
+.menu-wrapper.module-list > .menu-item .macro-append-insert > h3.complete {
   position: absolute;
   top: 0rem;
   left: 8rem;
 }
 
 h3.complete {
-  background: var(--green);
+  background: var(--greenbright);
   width: fit-content;
   padding: 0 1rem;
   transform: rotate(-4deg);
@@ -308,12 +347,114 @@ h2.subtitle.complete {
   background: var(--pink);
 }
 
+.dissolve {
+  animation: dissolve 0.5s ease-out normal;
+}
+
+@keyframes float {
+  0% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+  50% {
+    box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+    transform: translatey(-5px);
+  }
+  100% {
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+  }
+}
+
+@keyframes grow {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.1);
+  }
+}
+
+@keyframes dissolve {
+  0% {
+    opacity: 1;
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes twist {
+  0% {
+    /* transform: scale(1.2); */
+  }
+
+  100% {
+    transform: rotateY(180deg) scale(1.3);
+    /* transform: ; */
+  }
+}
+
+/* flip card  */
+
+/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
+.flip-card {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
+  /* border: 1px solid #f1f1f1; */
+  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+}
+
+/* This container is needed to position the front and back side */
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+/* Do an horizontal flip when you move the mouse over the flip box container */
+.twist .flip-card-inner {
+  /* transform: rotateY(180deg); */
+  animation: twist 1s forwards;
+  transition: transform 0.8s;
+}
+
+/* Position the front and back side */
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden; /* Safari */
+  backface-visibility: hidden;
+}
+
+/* Style the front side (fallback if image is missing) */
+.flip-card-front {
+  /* background-color: #bbb; */
+  color: black;
+}
+
+/* Style the back side */
+.flip-card-back {
+  background-color: dodgerblue;
+  color: white;
+  transform: rotateY(180deg);
+}
+
 /* SPEAKING  */
 
 main.speaking {
   /* padding: 1rem 8rem; */
   width: 60%;
   margin: auto;
+  margin-top: 0;
   /* overflow:scroll; */
   /* margin-left: 10rem; */
 }
@@ -329,6 +470,68 @@ main.speaking > .text-wrapper {
   margin-bottom: 20rem;
 
   /* overflow: scroll; */
+}
+
+/* GAME  */
+
+main.game {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+main.game > h1.title {
+  font-size: 7rem;
+}
+
+.game-wrapper {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.game-wrapper > div > h2.subtitle {
+  font-size: 5.5rem;
+  transform: rotate(4deg);
+  text-align: center;
+  margin: auto;
+  margin-block-end: 3rem;
+  width: fit-content;
+}
+
+.countdown {
+  border: 1px solid white;
+  padding: 3rem;
+  border-radius: 20%;
+  background-color: white;
+  color: var(--pink);
+  position: absolute;
+  left: 8%;
+}
+.timer > .countdown > h3 {
+  margin-bottom: 0;
+  font-size: 5rem;
+}
+
+.options-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-block-end: 2rem;
+}
+
+.options-wrapper > .option {
+  background-color: black;
+  padding: 2rem;
+  margin-inline-end: 1rem;
+}
+.options-wrapper > .option > a,
+.options-wrapper > .option > span {
+  font-family: var(--headings);
+  color: white;
+  font-weight: 900;
+  font-size: 3rem;
 }
 
 /* CODEWORD  */
@@ -384,6 +587,7 @@ main.codeword {
 .coderesult > h2.subtitle {
   margin-left: 0;
   font-size: 1.5rem;
+  color: white;
 }
 
 .enter-codename-wrapper > input {
