--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,7 +119,9 @@ textarea {
 }
 
 h1,
-h2 {
+h2,
+h3,
+h4 {
   font-family: var(--headings);
 }
 
@@ -132,9 +134,16 @@ h2.subtitle {
   /* margin-left: -10rem; */
 }
 
+h1.title.larger-title {
+  text-transform: uppercase;
+  font-size: 4rem;
+  transform: rotate(3deg);
+}
+
 h2.subtitle.inline {
-  display: inline;
+  display: inline-block;
   transform: rotate(-4deg);
+  margin: 0.5rem 0.55rem;
 }
 
 h1.title.left,
@@ -144,6 +153,14 @@ h2.subtitle.left {
 
 h1.title.top {
   margin-left: -3rem;
+}
+
+h4 {
+  margin-bottom: 1rem;
+  background: black;
+  width: fit-content;
+  padding: 0 1rem;
+  transform: rotate(-2deg);
 }
 
 .spinning {
@@ -539,7 +556,7 @@ main.game > h1.title {
 
 .options-wrapper > .option {
   background-color: black;
-  padding: 2rem;
+  padding: 1.5rem;
   margin-inline-end: 1rem;
 }
 .options-wrapper > .option > a,
@@ -606,14 +623,31 @@ main.codeword {
   color: white;
 }
 
+.enter-codename-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding-top: 2rem;
+}
+
+.enter-codename-wrapper > h2 {
+  text-transform: uppercase;
+
+  transform: rotate(4deg);
+  margin-bottom: 6rem;
+}
+
 .enter-codename-wrapper > input {
   margin-inline-end: 2rem;
   min-width: inherit;
+  min-height: 6rem;
   background-color: black;
   border: none;
   border-radius: 4px;
   transform: rotate(-2deg);
   color: white;
+  font-size: 4rem;
 }
 
 .enter-codename-wrapper > button {
@@ -909,4 +943,27 @@ main.speaking.chosen {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+/* CONVERSATION  */
+
+.convo-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.convo-wrapper > .msg {
+  background-color: #4da59a;
+  padding: 0.5rem 1rem;
+  max-width: 60%;
+  border-radius: 15px;
+}
+
+.convo-wrapper > .msgl {
+  align-self: flex-start;
+}
+
+.convo-wrapper > .msgr {
+  align-self: flex-end;
+  background-color: #a5a44d;
 }
